tests/fixtures/invalid/pow_none_float_none.py
# Cannot call pow() with None, Float, None
x = pow(None, 1.0, None)
